[package]
name = "copy_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.13.1", features = ["tls-native-roots"] }
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
solana-sdk = "2.2.2"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"
bs58 = "0.5.1"
solana-transaction-status = "2.2.2"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
futures = "0.3.31"
log = "0.4.22"
openssl = "=0.10.73"
pumpfun = "4.3.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
base64 = "0.21"
once_cell = "1.19"
borsh = "0.10"
solana-program = "2.2.1"
solana-account-decoder = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
solana-client = "2.2.1"
dashmap = "5.5"
structopt = "0.3.26"
thiserror = "2.0.12"
solana-metrics = "2.3.3"
num-bigint = "0.4.6"
num-traits = "0.2"
crossbeam = "0.8"
core_affinity = "0.8"


[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5" 

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[dependencies.dynamic-bonding-curve-sdk]
git = "https://github.com/MeteoraAg/dynamic-bonding-curve"
branch = "main" # or use specific commit hash for stability
package = "dynamic-bonding-curve-sdk"
